<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageUserProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textUserName"
            style="@style/PharmaIncTextView.ExtraBig.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageUserProfile"
            tools:text="José Augusto Fernandes" />

        <TextView
            android:id="@+id/textUserEmail"
            style="@style/PharmaIncTextView.Large.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textUserName"
            tools:text="José Augusto Fernandes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/PharmaIncTextView.Medium.Bold.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:text="@string/label_gender" />

            <TextView
                android:id="@+id/textUserGender"
                style="@style/PharmaIncTextView.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                tools:text="José Augusto Fernandes" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:background="@color/ice" />

            <TextView
                style="@style/PharmaIncTextView.Medium.Bold.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:text="@string/label_phone" />

            <TextView
                android:id="@+id/textUserPhone"
                style="@style/PharmaIncTextView.Large"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="José Augusto Fernandes" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:background="@color/ice" />

            <TextView
                style="@style/PharmaIncTextView.Medium.Bold.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:text="@string/label_birthday" />

            <TextView
                android:id="@+id/textUserBirthDay"
                style="@style/PharmaIncTextView.Large"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                tools:text="José Augusto Fernandes" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:background="@color/ice" />

            <TextView
                style="@style/PharmaIncTextView.Medium.Bold.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:text="@string/label_address" />

            <TextView
                android:id="@+id/textUserAddress"
                style="@style/PharmaIncTextView.Large"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                tools:text="José Augusto Fernandes" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:background="@color/ice" />


            <TextView
                style="@style/PharmaIncTextView.Medium.Bold.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:text="@string/label_nationality" />

            <TextView
                android:id="@+id/textUserNationality"
                style="@style/PharmaIncTextView.Large"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                tools:text="José Augusto Fernandes" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:background="@color/ice" />

            <TextView
                android:id="@+id/textIdLabel"
                style="@style/PharmaIncTextView.Medium.Bold.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:text="Id" />


            <TextView
                android:id="@+id/textUserId"
                style="@style/PharmaIncTextView.Large"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="match_parent"
                tools:text="José Augusto Fernandes" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>